--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -11,7 +11,7 @@ body {
     // @extend %force-center;
     // margin-top: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #eaeaea;
+    background-color: $bodyBackground;
 }
 
 // section {
