Deleted hr ruleset

--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -1,7 +1,8 @@
 /* Colors */
 $green: #0b9c00;
 $pureWhite: #ffffff;
-$pureBlack : #000000;
+$pureBlack: #000000;
+$bodyBackground: #eaeaea;
 $backgroundGreen: #2a9445;
 $loaderGreen: #9bcd64;
 
