--- a/assets/stylesheets/helpers/placeholders.scss
+++ b/assets/stylesheets/helpers/placeholders.scss
@@ -8,7 +8,7 @@
 %section-styles {
     background-color: $pureWhite;
     margin-left: 1%;
-    margin-top: 20px;
+    margin-top: $sectionSpacing;
     border-radius: .25rem;
 }
 
