--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -12,6 +12,7 @@ $bgImage: url("../images/color5.png");
 /* Structure */
 $minWidth: 920px;
 $maxWidth: 1990px;
+$sectionSpacing: 20px;
 
 /* Loading */
 $baseLoadZIndex: 1000;
