--- a/assets/stylesheets/components/loader.scss
+++ b/assets/stylesheets/components/loader.scss
@@ -18,11 +18,11 @@
         height: 150px;
         margin: -75px 0 0 -75px;
         z-index: $baseLoadZIndex + 500; //The spinning icon needs to sit above the loader wrapper
-        &:before {
+        &::before {
             @include loaderBorder(absolute, 5px, 5px, 5px, 5px);
             @include animation(spin, 3s);
         }
-        &:after {
+        &::after {
             @include loaderBorder(absolute, 15px, 15px, 15px, 15px);
             @include animation(spin, 1.5s);
         }
