--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -128,7 +128,7 @@ ul {
     height: 150px;
     margin: -75px 0 0 -75px;
     z-index: 1500; }
-    #loader-wrapper #loader:before {
+    #loader-wrapper #loader::before {
       border-width: 3px;
       border-style: solid;
       border-color: transparent;
@@ -142,7 +142,7 @@ ul {
       content: "";
       -webkit-animation: spin 3s linear infinite;
       animation: spin 3s linear infinite; }
-    #loader-wrapper #loader:after {
+    #loader-wrapper #loader::after {
       border-width: 3px;
       border-style: solid;
       border-color: transparent;
