Decreased opacity of pie chart slices on hover

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -41,6 +41,11 @@
             stroke: $pureBlack;
             stroke-width: 1px;
         }
+        .pie-slice:hover {
+            path {
+                fill-opacity: 0.5;  
+            }
+        }
     }
 }
 
