--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -212,12 +212,15 @@ h1 {
   @media (min-width: 1110px) {
     h1 {
       font-size: 2.5rem; } }
+  h1 p {
+    margin-top: 10px;
+    font-size: 2rem; }
 
 .navbar {
   background-color: #2a9445;
   background-image: url("../images/color5.png");
   border-bottom: 2px solid #000000;
-  flex-direction: column; }
+  padding: 0; }
   .navbar h2 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
