--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -7,9 +7,13 @@ h1 {
     @include mqWidth(1110px) {
         font-size: 2.5rem;
     }
-    p {
+    span {
+        display: block;
         margin-top: 10px;
-        font-size: 2rem;
+        font-size: 1.3rem;
+        @include mqWidth(1110px) {
+            font-size: 2rem;
+        }
     }
 }
 
