--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -223,6 +223,7 @@ h1 {
 .navbar {
   background-color: #2a9445;
   background-image: url("../images/color5.png");
+  background-size: 100% 100%;
   border-bottom: 2px solid #000000;
   padding: 0; }
   .navbar h2 {
