--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -225,7 +225,8 @@ h1 {
   background-image: url("../images/color5.png");
   background-size: 100% 100%;
   border-bottom: 2px solid #000000;
-  padding: 0; }
+  padding: 0;
+  text-shadow: #000 0px 7px 10px; }
   .navbar h2 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
