--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -226,7 +226,7 @@ h1 {
   background-size: 100% 100%;
   border-bottom: 2px solid #000000;
   padding: 0;
-  text-shadow: #000 0px 7px 10px; }
+  text-shadow: #000 0 3px 0; }
   .navbar h2 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
