--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -14,5 +14,8 @@ $minWidth: 920px;
 $maxWidth: 1990px;
 $sectionSpacing: 20px;
 
+/* Navbar */
+$navbarBreakpoint: 1216px;
+
 /* Loading */
 $baseLoadZIndex: 1000;
