--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -49,7 +49,7 @@ h1 {
 /* Chart Icons */
 .fa-div, .fa-div-navbar {
     font-size: 40px;
-    margin: 0 auto;
+    margin: 15px auto 0;
     i {
         margin: 0 20px;
     }
