--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -210,14 +210,14 @@ ul {
 h1 {
   font-size: 1.5rem;
   color: #ffffff; }
-  @media (min-width: 1216px) {
+  @media (min-width: 1300px) {
     h1 {
       font-size: 2.5rem; } }
   h1 span {
     display: block;
     margin-top: 10px;
     font-size: 1.3rem; }
-    @media (min-width: 1216px) {
+    @media (min-width: 1300px) {
       h1 span {
         font-size: 2rem; } }
 
@@ -232,7 +232,7 @@ h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
     color: #ffffff; }
-    @media (min-width: 1216px) {
+    @media (min-width: 1300px) {
       .navbar h2 {
         font-size: 2rem; } }
 
@@ -245,13 +245,13 @@ h1 {
 /* Chart Icons */
 .fa-div, .fa-div-navbar {
   font-size: 40px;
-  margin: 0 auto; }
+  margin: 15px auto 0; }
   .fa-div i, .fa-div-navbar i {
     margin: 0 20px; }
 
 .fa-div-navbar {
   color: #ffffff; }
-  @media (min-width: 1216px) {
+  @media (min-width: 1300px) {
     .fa-div-navbar {
       font-size: 50px; } }
 
