--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -54,7 +54,7 @@ footer {
 }
 
 .selection-description {
-    min-height: 80px; //Since the 1st selection-description div contains more text than the 2nd, this ensures the 2nd div is the same height as the 1st
+    height: 60px; //Since the 1st selection-description div contains more text than the 2nd, this ensures the 2nd div is the same height as the 1st for design consistency
 }
 
 //This class is added to charts via Javscript in chartScript.js
