--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -66,7 +66,7 @@ footer {
     color: #ffffff; }
 
 .selection-description {
-  min-height: 80px; }
+  height: 60px; }
 
 /* List Icons Styles */
 .fa-li {
