Completed change over from 'nav' tag to 'header'

--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -14,8 +14,8 @@ $minWidth: 920px;
 $maxWidth: 1990px;
 $sectionSpacing: 20px;
 
-/* Navbar */
-$navbarBreakpoint: 1300px;
+/* Header */
+$headerBreakpoint: 1300px;
 
 /* Loading */
 $baseLoadZIndex: 1000;
