--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -6,7 +6,7 @@
 @import "components/structure";
 @import "components/no-js";
 @import "components/loader";
-@import "components/navbar";
+@import "components/header";
 @import "components/charts";
 @import "components/piechart-popup";
 @import "components/images";
