Changed no-js to always display header regardless of js or not

--- a/assets/stylesheets/components/no-js.scss
+++ b/assets/stylesheets/components/no-js.scss
@@ -29,7 +29,7 @@
             }
         }
     }
-    #loader-wrapper, header, .alert, main, footer {
-    display: none; //Remove all other elements except the no-js-display
+    #loader-wrapper, .alert, main, footer {
+        display: none; //Remove all other elements except the no-js-display
     }
 }
