Adjusted positioning of charts

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -1,6 +1,11 @@
 /* Chart Styling
 -------------------- */
 
+div {
+    .dc-chart {
+        float: none;
+    }
+}
 .highlights-figure, .highlights-figure span {
     font: {
         weight: bold;
