--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -257,6 +257,9 @@ h1 {
 
 /* Chart Styling
 -------------------- */
+div .dc-chart {
+  float: none; }
+
 .highlights-figure, .highlights-figure span {
   font-weight: bold;
   font-size: 1.5rem; }
