--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -14,7 +14,7 @@
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
-h2, .force-center, h1, .selector-container, select, .reset-button, .popup, figure, .img-figure img {
+h2, .force-center, h1, .selector-container, select, .reset-button, figure, .img-figure img {
   margin: 15px auto;
   display: block; }
 
@@ -328,48 +328,6 @@ button:focus {
   .reset-button .fa {
     color: #bfbfbf;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); }
-
-/* Piechart Informative Popup
--------------------- */
-.popup {
-  cursor: pointer; }
-  @media (hover: none) {
-    .popup {
-      display: none; } }
-  @media (hover: hover) {
-    .popup {
-      display: block; } }
-  .popup .popuptext {
-    font-size: 0.8rem;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 14px 0 8px;
-    position: absolute;
-    z-index: 1;
-    bottom: 84%;
-    left: 50%;
-    margin-left: -80px; }
-    .popup .popuptext:after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      margin-left: -5px;
-      border-width: 5px;
-      border-style: solid;
-      border-color: #555 transparent transparent transparent; }
-  .popup .hide {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s 0.3s, opacity 0.3s linear; }
-  .popup .fa-window-close {
-    position: absolute;
-    left: 141px;
-    bottom: 43px;
-    font-size: 1rem; }
 
 /* Image Styling
 -------------------- */
