Adjusted  to darker color

--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -4,7 +4,7 @@ $pureWhite: #ffffff;
 $pureBlack: #000000;
 $bodyBackground: #eaeaea;
 $backgroundGreen: #2a9445;
-$loaderGreen: #9bcd64;
+$loaderGreen: #8bb85a;
 
 /* Background Image */
 $bgImage: url("../images/color5.png");
