--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -89,7 +89,7 @@ ul {
   width: 100%;
   height: 100%;
   z-index: 1000;
-  background: #9bcd64; }
+  background: #8bb85a; }
   #loader-wrapper #loader {
     border-width: 3px;
     border-style: solid;
@@ -321,7 +321,7 @@ button:focus {
 .no-js #no-js-display {
   width: 100%;
   height: 100%;
-  background: #9bcd64;
+  background: #8bb85a;
   color: #ffffff;
   position: fixed;
   display: block; }
@@ -349,7 +349,7 @@ button:focus {
 .ms-ie #ms-ie-display {
   width: 100%;
   height: 100%;
-  background: #9bcd64;
+  background: #8bb85a;
   color: #ffffff;
   position: fixed;
   display: block; }
